# fray-tracer

./: Basics.cpp  Basics.h  CMakeLists.txt  Camera.cpp  Camera.h  HitInfo.cpp  HitInfo.h  Material.cpp  Material.h  Pixel.h  README.md  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Surface.h  Triangle.cpp  Triangle.h  main.cpp
scenes/: ShadowTest.txt  ambient_sphere.scn  arm-reach.txt  arm-top.txt  bear.scn  bottle-nolabel.txt  bottle.txt  dragon.scn  gear.txt  outdoor.scn  spheres1.scn  spheres2.scn  spheres3.scn  spheres3x.scn  triangle.scn
